refactor: 优化素材依赖服务实现
- 添加素材和节目相关的仓库依赖
- 实现批量素材存在性和组织归属校验
- 解析素材引用时支持路径追踪
- 完善节目内容获取逻辑，支持按版本查询
- 移除临时的单条校验逻辑，统一使用批量校验
- 改进素材依赖的增删查逻辑，确保数据一致性